# trigger-scheduler

./: .env.docker  .gitignore  README.md  beat.Dockerfile  compose.yaml  docker-entrypoint.sh  pyproject.toml  render.yaml  requirements.txt  web.Dockerfile  worker.Dockerfile
accounts/: tests.py  urls.py  views.py
backend/: celery.py  constants.py  db.py  settings.py  urls.py
eventlogs/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
eventlogs/migrations/: 0001_initial.py  0002_alter_eventlog_trigger.py  0003_alter_eventlog_trigger.py  0004_eventlog_trigger_data_alter_eventlog_trigger.py  0005_eventlog_created_at.py
templates/: base.html  home.html
templates/accounts/: login.html  register.html
templates/eventlogs/: event_logs.html
templates/triggers/: trigger_confirm_delete.html  trigger_form.html  trigger_list.html
triggers/: admin.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
triggers/migrations/: 0001_initial.py
